--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,22 +234,22 @@
     <string name="material_color_red">Red</string>
     <string name="material_color_pink">Pink</string>
     <string name="material_color_purple">Purple</string>
-    <string name="material_color_deep_purple">Deep Purple</string>
+    <string name="material_color_deep_purple">Deep purple</string>
     <string name="material_color_indigo">Indigo</string>
     <string name="material_color_blue">Blue</string>
-    <string name="material_color_light_blue">Light Blue</string>
+    <string name="material_color_light_blue">Light blue</string>
     <string name="material_color_cyan">Cyan</string>
     <string name="material_color_teal">Teal</string>
     <string name="material_color_green">Green</string>
-    <string name="material_color_light_green">Light Green</string>
+    <string name="material_color_light_green">Light green</string>
     <string name="material_color_lime">Lime</string>
     <string name="material_color_yellow">Yellow</string>
     <string name="material_color_amber">Amber</string>
     <string name="material_color_orange">Orange</string>
-    <string name="material_color_deep_orange">Deep Orange</string>
+    <string name="material_color_deep_orange">Deep orange</string>
     <string name="material_color_brown">Brown</string>
     <string name="material_color_gray">Gray</string>
-    <string name="material_color_blue_gray">Blue Gray</string>
+    <string name="material_color_blue_gray">Blue gray</string>
 
     <!-- Scheduled Messages Screen -->
     <string name="delete_scheduled_message">Are you sure you want to delete this scheduled message
