start building the intro activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
 <resources>
 
     <string name="app_name">Messenger</string>
+    <string name="app_name_long">Pulse (SMS/Tablet Messenger)</string>
     <string name="app_title">Messaging</string>
 
     <!-- Drawer Items -->
