--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="menu_view_contacts">View contacts</string>
     <string name="menu_view_media">View media</string>
     <string name="menu_delete_conversation">Delete conversation</string>
+    <string name="menu_archive_conversation">Archive Conversation</string>
     <string name="menu_conversation_information">Conversation information</string>
     <string name="menu_conversation_blacklist">Blacklist contact</string>
     <string name="menu_conversation_schedule">Schedule a message</string>
