--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@
     <string name="message_copied_to_clipboard">Message copied to clipboard</string>
     <string name="view_details">View Details</string>
     <string name="delete">Delete</string>
-    <string name="copy_message">Copy Message</string>
+    <string name="copy_message">Copy Text</string>
     <string name="no_media">No media in this conversation!</string>
 
     <!-- Compose Screen -->
