--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,6 +134,7 @@
     <string name="delete">Delete</string>
     <string name="copy_message">Copy Text</string>
     <string name="no_media">No media in this conversation!</string>
+    <string name="error_decrypting">Error running decryption! Please view this message on your phone.</string>
 
     <!-- Compose Screen -->
     <string name="enter_contact_name">Enter contact name</string>
