--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,6 +135,7 @@
     <string name="copy_message">Copy Text</string>
     <string name="no_media">No media in this conversation!</string>
     <string name="error_decrypting">Error running decryption! Please view this message on your phone.</string>
+    <string name="message_sending_failed">Failed to send message!</string>
 
     <!-- Compose Screen -->
     <string name="enter_contact_name">Enter contact name</string>
