--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,7 @@
     <string name="record_video">Record Video</string>
     <string name="record_audio">Record Audio</string>
     <string name="attach_location">Attach Location</string>
+    <string name="no_location_found">Could not find your location.</string>
     <string name="camera_permission_needed">The camera permission needs to be granted to take
         pictures!</string>
     <string name="take_picture">Snap Picture</string>
