--- a/api_implementation/src/main/res/values/strings.xml
+++ b/api_implementation/src/main/res/values/strings.xml
@@ -44,5 +44,14 @@
     <string name="api_no_name">No name entered</string>
     <string name="api_no_phone_number">No phone number entered</string>
     <string name="api_login_error">An error occurred logging in, wrong email or password?</string>
+    <string name="api_activate_summary">Login to get all of your messages on this device!</string>
+    <string name="api_activate_1">1</string>
+    <string name="api_activate_2">2</string>
+    <string name="api_activate_1_1">Head to</string>
+    <string name="api_activate_1_2">https://messenger.klinkerapps.com/activate.html</string>
+    <string name="api_activate_1_3">on a mobile device or computer.</string>
+    <string name="api_activate_2_1">On the website</string>
+    <string name="api_activate_2_2">enter the code to the right</string>
+    <string name="api_activate_2_3">to connect your account!</string>
 
 </resources>
