--- a/api_implementation/src/main/res/values/strings.xml
+++ b/api_implementation/src/main/res/values/strings.xml
@@ -53,5 +53,6 @@
     <string name="api_activate_2_1">On the website</string>
     <string name="api_activate_2_2">enter the code to the right</string>
     <string name="api_activate_2_3">to connect your account!</string>
+    <string name="api_confirm_password">Please confirm your password:</string>
 
 </resources>
