implement nougat style 'Messaging' notification toggled by a feature flag

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,6 +183,7 @@
         <item>Thanks</item>
     </string-array>
     <string name="new_mms_message">New MMS message</string>
+    <string name="you">You</string>
 
 
     <!-- About, Help and Feedback and Settings -->
