change one string

--- a/api_implementation/src/main/res/values/strings.xml
+++ b/api_implementation/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="api_activate_1">1</string>
     <string name="api_activate_2">2</string>
     <string name="api_activate_1_1">Head to</string>
-    <string name="api_activate_1_2">tv.klinkerapps.com/</string>
+    <string name="api_activate_1_2">tv.klinkerapps.com</string>
     <string name="api_activate_1_3">on a mobile device or computer.</string>
     <string name="api_activate_2_1">On the website</string>
     <string name="api_activate_2_2">enter the code to the right</string>
