--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,8 @@
     <string name="message_sending_failed">Failed to send message!</string>
 
     <!-- Compose Screen -->
+    <string name="compose_message">Compose new message</string>
+    <string name="send_message">Send message</string>
     <string name="enter_contact_name">Enter contact name</string>
     <string name="error_processing_vcard">Error processing vcard</string>
 
