--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,10 @@
     <string name="app_name_long">Pulse (SMS/Tablet Messenger)</string>
     <string name="app_title">Messaging</string>
 
+    <!-- Launcher Shortcuts -->
+    <string name="shortcut_compose_short">New Message</string>
+    <string name="shortcut_compose_long">Start a new conversation!</string>
+
     <!-- Drawer Items -->
     <string name="menu_conversations">Conversation list</string>
     <string name="menu_archived_conversations">Archived conversations</string>
