--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,7 @@
     <string name="flip_picture">Flip Camera</string>
     <string name="attached_image">Attached Image</string>
     <string name="remove_image">Remove Attached Image</string>
+    <string name="edit_image">Edit Attached Image</string>
     <string name="permission_needed_for_action">Permissions needed for this action.</string>
     <string name="request_permission">Request Permission</string>
     <string name="no_messages_with_contact">You don\'t have any messages in this conversation yet,
