--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="menu_invite">Invite friends</string>
     <string name="menu_settings">Global Settings</string>
     <string name="menu_account">My account</string>
+    <string name="menu_device_texting">Text from any device</string>
     <string name="menu_help">Help &amp; feedback</string>
     <string name="menu_about">About</string>
     <string name="menu_search">Search</string>
