--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,6 +184,7 @@
     <string name="read">Read</string>
     <string name="reply">Reply</string>
     <string name="reply_to">Reply to %1$s</string>
+    <string name="call">Call</string>
     <string-array name="reply_choices">
         <item>Yes</item>
         <item>No</item>
