--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,6 +122,7 @@
         pictures!</string>
     <string name="take_picture">Snap Picture</string>
     <string name="flip_picture">Flip Camera</string>
+    <string name="fullscreen">Fullscreen</string>
     <string name="attached_image">Attached Image</string>
     <string name="remove_image">Remove Attached Image</string>
     <string name="edit_image">Edit Attached Image</string>
