--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,11 @@
     <string name="shortcut_compose_short">New Message</string>
     <string name="shortcut_compose_long">Start a new conversation!</string>
 
+    <!-- Onboarding -->
+    <string name="title_1"></string>
+    <string name="title_2"></string>
+    <string name="title_3"></string>
+
     <!-- Drawer Items -->
     <string name="menu_conversations">Conversation list</string>
     <string name="menu_archived_conversations">Archived conversations</string>
@@ -267,6 +272,7 @@
     <string name="setup_my_account">Setup Account</string>
     <string name="setup_my_account_summary">Sign up or login to your account to start using
         more features like messaging from your tablet or computer</string>
+    <string name="preparing_new_account">Preparing account...</string>
     <string name="delete_account">Delete Account</string>
     <string name="delete_account_summary">Removes the account from this device, your other signed in
         devices, and the server. This is not reversible!</string>
