--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,8 +244,6 @@
     <string name="led_color">LED Color</string>
     <string name="ringtone">Ringtone</string>
     <string name="group_name">Group Name</string>
-    <string name="global_color_set">These colors will be ignored in this individual conversation,
-        since you have a global color set. They will be used in group conversations with this contact.</string>
     <string name="notification_settings">Notifications</string>
     <string name="vibrate">Vibrate Pattern</string>
     <string name="vibrate_off">No vibration</string>
@@ -292,6 +290,9 @@
     <string name="font_size_normal">Normal</string>
     <string name="font_size_large">Large</string>
     <string name="font_size_extra_large">Extra Large</string>
+    <string name="advanced">Advanced</string>
+    <string name="send_as_mms">Convert to MMS</string>
+    <string name="send_as_mms_summary">Long messages will be sent as MMS instead of individual SMS</string>
 
 
     <!-- Theming Options -->
