--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -345,6 +345,7 @@
     <string name="audio_message">Audio Message</string>
     <string name="video_message">Video Message</string>
     <string name="picture_message">Picture Message</string>
+    <string name="gif_message">GIF Message</string>
     <string name="contact_card">Contact Card</string>
     <string name="conversation_with">Conversation with %1$s</string>
     <string name="send">Send</string>
