--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,6 +213,8 @@
     <string name="app_version">App Version</string>
     <string name="device_id">Device ID</string>
     <string name="device_info">Device Info</string>
+    <string name="website">Website</string>
+    <string name="access_messages_from_any_device">Access and send messages from any device!</string>
     <string name="beta_disclaimer">This project is still in beta, please report issues that you
         might find!</string>
     <string name="faqs">Frequently Asked Questions</string>
