add a preference to the conversation settigs to allow the user to adjust which sim card they are using

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,6 +234,8 @@
         <item quantity="one">in %1$d conversation</item>
         <item quantity="other">in %1$d conversations</item>
     </plurals>
+    <string name="dual_sim">Select SIM Card</string>
+    <string name="dual_sim_summary">Select which SIM card should be used for this conversation</string>
     <string name="pin_conversation">Pin Conversation</string>
     <string name="pin_conversation_summary">Keeps this conversation at the top of the list</string>
     <string name="mute_conversation">Mute Conversation</string>
@@ -353,6 +355,7 @@
     <string name="send">Send</string>
 
     <!-- Other -->
+    <string name="default_text">Default</string>
     <string name="did_you_know">Did you know?</string>
     <string name="use_from_anywhere">Messenger can be used from any device connected to the internet -
         try it out today!</string>
