--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
     <string name="type_message">Type message</string>
     <string name="type_message_to">Type message to %1$s</string>
     <string name="attach">Attach</string>
+    <string name="select_sim">Select SIM</string>
     <string name="message_from">%1$s</string>
     <string name="message_from_bullet">%1$s  •</string>
     <string name="mms_image">MMS Image</string>
