--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@
     <string name="messages">Messages</string>
 
     <!-- Invite Friends Screen -->
-    <string name="invite_friends_title">Love Messenger?</string>
+    <string name="invite_friends_title">Love Pulse?</string>
     <string name="invite_friends_summary">So do we and so will others! We\'re trying to get it in
         as many hands as we can to continue making it the best product that it can be and by
         inviting your friends to try, you\'re helping with this! \n\nSelect the friends below that
@@ -168,9 +168,9 @@
     <string name="onboarding_title_2">Available Everywhere</string>
     <string name="onboarding_title_3">Powerful Customization</string>
     <string name="onboarding_content_1">"Smooth, fluid layouts with a powerful design and seamless integration.
-        Messenger puts your conversations front and center."</string>
+        Pulse puts your conversations front and center."</string>
     <string name="onboarding_content_2">Message from your tablet, computer, watch, or any other connected devices.</string>
-    <string name="onboarding_content_3">Pin, mute, theme, and customize notifications for any contacts you are chatting with. Make Messenger yours.</string>
+    <string name="onboarding_content_3">Pin, mute, theme, and customize notifications for any contacts you are chatting with. Make Pulse yours.</string>
     <string name="message_anywhere_onboarding_title_1">Message Anywhere</string>
     <string name="message_anywhere_onboarding_title_2">Subscription</string>
     <string name="message_anywhere_onboarding_title_3">Week Long Trial</string>
@@ -221,7 +221,7 @@
     <string name="faqs">Frequently Asked Questions</string>
     <string name="features">Features</string>
     <string name="google_plus">Google+</string>
-    <string name="google_plus_summary">Messenger Beta Community</string>
+    <string name="google_plus_summary">Pulse Beta Community</string>
     <string name="email">Email</string>
     <string name="email_summary">luke@klinkerapps.com</string>
     <string name="twitter">Twitter</string>
@@ -356,7 +356,7 @@
     <!-- Other -->
     <string name="default_text">Default</string>
     <string name="did_you_know">Did you know?</string>
-    <string name="use_from_anywhere">Messenger can be used from any device connected to the internet -
+    <string name="use_from_anywhere">Pulse can be used from any device connected to the internet -
         try it out today!</string>
     <string name="learn_more">Learn More</string>
     <string name="dismiss">Dismiss</string>
