--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -269,6 +269,7 @@
     <string name="add">Add</string>
     <string name="privacy_policy">Privacy Policy</string>
     <string name="privacy_policy_summary">View our privacy policy on the web</string>
+    <string name="lifetime_subscriber">Lifetime Subscriber</string>
     <string name="setup_my_account">Setup Account</string>
     <string name="setup_my_account_summary">Sign up or login to your account to start using
         more features like messaging from your tablet or computer</string>
@@ -379,5 +380,17 @@
     <string name="purchase_error_cancelled">You cancelled the purchase :(</string>
     <string name="purchase_error_bad_google_play">Uh oh, Google Play might be having issues, they gave us a bad result.</string>
     <string name="purchase_error_bad_sku">Hmm&#8230; That purchase didn\'t match one on our record.</string>
+
+    <!-- Purchases -->
+    <string name="subscriptions">Subscription are billed after the seven day trial and can be changed/cancelled at any time:</string>
+    <string name="billed_immediately">This is billed immediately.</string>
+    <string name="lifetime_purchase">$10.99 - Lifetime Membership</string>
+    <string name="lifetime_purchase_summary">Pay once, and never again!</string>
+    <string name="yearly_purchase">$5.99 every year</string>
+    <string name="yearly_purchase_summary">The best deal.</string>
+    <string name="three_month_purchase">$1.99 every three months</string>
+    <string name="three_month_purchase_summary">Can\'t go wrong with this one.</string>
+    <string name="monthly_purchase">$0.99 every month</string>
+    <string name="monthly_purchase_summary">Just want to try? No problem.</string>
 
 </resources>
